--- a/MVCBookShop/Views/Auth/RegisterIndex.cshtml
+++ b/MVCBookShop/Views/Auth/RegisterIndex.cshtml
@@ -1,13 +1,16 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 
-<form method="post" asp-controller="Auth" asp-action="Register">
-    <div class="form-group">
-        <label for="login">Логин:</label>
-        <input type="text" class="form-control" id="login" name="login" required>
-    </div>
-    <div class="form-group">
-        <label for="password">Пароль:</label>
-        <input type="password" class="form-control" id="password" name="password" required>
-    </div>
-    <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
-</form>
+<div class="center-container">
+    <form method="post" asp-controller="Auth" asp-action="Register">
+        <div class="form-group">
+            <label for="login">Логин:</label>
+            <input type="text" class="form-control" id="login" name="login" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Пароль:</label>
+            <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Зарегистрироваться</button>
+        <p>Уже есть аккаунт? <a asp-controller="Auth" asp-action="Index">Войдите</a>.</p>
+    </form>
+</div>
