--- a/MVCBookShop/wwwroot/css/site.css
+++ b/MVCBookShop/wwwroot/css/site.css
@@ -25,3 +25,14 @@ body {
     display: flex;
     flex-wrap: wrap;
 }
+
+.center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
