--- a/MVCBookShop/Views/Home/Index.cshtml
+++ b/MVCBookShop/Views/Home/Index.cshtml
@@ -45,3 +45,18 @@
         }
     </div>
 </div>
+
+@{
+    string message = TempData["Message"]?.ToString();
+}
+
+@if (!string.IsNullOrEmpty(message))
+{
+    <script>
+        var message = '@Html.Raw(message)';
+        window.onload = function () {
+            alert(message);
+        };
+    </script>
+}
+
