--- a/MVCBookShop/Views/Account/Index.cshtml
+++ b/MVCBookShop/Views/Account/Index.cshtml
@@ -4,21 +4,18 @@
     ViewData["Title"] = "User Profile";
 }
 
-<h2>User Profile</h2>
-
-<div>
-    <h3>Name: @Model.Name</h3>
-    <h3>Login: @Model.Login</h3>
+<div class="center-text">
+    <h3>Добрый день, @(Model.Name != null ? Model.Name : Model.Login)</h3>
 </div>
 
-<h2>Orders</h2>
+<h2>История заказов</h2>
 <table class="table">
     <thead>
         <tr>
-            <th>Date</th>
-            <th>Book Title</th>
-            <th>Price</th>
-            <th>Authors</th>
+            <th>Дата</th>
+            <th>Название книги</th>
+            <th>Цена</th>
+            <th>Авторство</th>
         </tr>
     </thead>
     <tbody>
@@ -40,7 +37,7 @@
 </table>
 
 <form asp-controller="Account" asp-action="Logout" method="post">
-    <button type="submit" class="btn btn-danger">Logout</button>
+    <button type="submit" class="btn btn-danger">Выйти из аккаунта</button>
 </form>
 
 @{
