--- a/MVCBookShop/Views/Details/WritingIndex.cshtml
+++ b/MVCBookShop/Views/Details/WritingIndex.cshtml
@@ -1,16 +1,20 @@
 ﻿@model MVCBookShop.Models.Writing
 
-<h2>@Model.Title</h2>
+<div class="center-div">
+    <row>
+    <h2 class="center-text" style="font-weight: bold;">@Model.Title</h2>
+    </row>
+    <row>
+    <p>@Model.Description</p>
+    </row>
+    <h5>Книги, содержащие это произведение:</h5>
 
-<p>@Model.Description</p>
-
-<h3>Книги, содержащие это произведение:</h3>
-
-<ul>
-    @foreach (var book in Model.WritingBooks.Select(wb => wb.Book))
-    {
-        <li>
-            <a href="@Url.Action("Details", "Home", new { id = book.Id })">@book.Title</a> - @book.Year
-        </li>
-    }
-</ul>
+    <ul>
+        @foreach (var book in Model.WritingBooks.Select(wb => wb.Book))
+        {
+            <li>
+                <a href="@Url.Action("Details", "Home", new { id = book.Id })">@book.Title</a> - @book.Year
+            </li>
+        }
+    </ul>
+</div>
