--- a/MVCBookShop/Views/Cart/Index.cshtml
+++ b/MVCBookShop/Views/Cart/Index.cshtml
@@ -4,18 +4,18 @@
     ViewData["Title"] = "Cart";
 }
 
-<h1>Cart</h1>
+<h1>Корзина</h1>
 
 @if (Model.Items.Any())
 {
     <table class="table">
         <thead>
             <tr>
-                <th>Book</th>
-                <th>Price</th>
-                <th>Quantity</th>
-                <th>Total</th>
-                <th>Action</th>
+                <th>Книга</th>
+                <th>Цена</th>
+                <th>Количество</th>
+                <th>Всего</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -24,12 +24,12 @@
                 <tr>
                     <td>@item.Title</td>
                     <td>@item.Price</td>
-                    <td>@item.Quantity</td> <!-- Добавлено отображение количества экземпляров -->
+                    <td>@item.Quantity</td>
                     <td>@(item.Price * item.Quantity)</td>
                     <td>
                         <form asp-action="RemoveFromCart" method="post">
                             <input type="hidden" name="bookId" value="@item.BookId" />
-                            <button type="submit" class="btn btn-danger">Remove</button>
+                            <button type="submit" class="btn btn-danger">Убрать</button>
                         </form>
                     </td>
                 </tr>
@@ -39,13 +39,13 @@
 }
 else
 {
-    <p>Your cart is empty.</p>
+    <p class="center-text">Ваша корзина пуста.</p>
 }
 
 @if (Model.Items.Any())
 {
     <form asp-action="Checkout" method="post">
-        <button type="submit" class="btn btn-primary">Checkout</button>
+        <button type="submit" class="btn btn-primary">Заказать</button>
     </form>
 }
 
