--- a/MVCBookShop/Views/Details/PublisherIndex.cshtml
+++ b/MVCBookShop/Views/Details/PublisherIndex.cshtml
@@ -1,24 +1,31 @@
 ﻿@model MVCBookShop.Models.Publisher
 
-<h2>@Model.Name</h2>
+<div class="row">
+    <div class="col">
+        <h2>@Model.Name</h2>
 
-@if (!string.IsNullOrEmpty(Model.Description))
-{
-    <p>@Model.Description</p>
-}
-
-@if (!string.IsNullOrEmpty(Model.ImageLink))
-{
-    <img src="@Model.ImageLink" alt="Image of @Model.Name" />
-}
+        @if (!string.IsNullOrEmpty(Model.Description))
+        {
+            <p>@Model.Description</p>
+        }
+    </div>
+    <div class="col">
+    @if (!string.IsNullOrEmpty(Model.ImageLink))
+    {
+        <img src="@Model.ImageLink" alt="Image of @Model.Name" />
+    }
+    </div>
+</div>
 
 <h3>Книги:</h3>
+<div class="container mt-5">
+    <div class="row">
+            @foreach (var book in Model.Books)
+            {
+                <div class="col-md-2 mb-2">
+                    <p><a href="@Url.Action("Details", "Home", new { id = book.Id })">@book.Title</a> - @book.Year</p>
+                </div>
+            }
 
-<ul>
-    @foreach (var book in Model.Books)
-    {
-        <li>
-            <a href="@Url.Action("Details", "Home", new { id = book.Id })">@book.Title</a> - @book.Year
-        </li>
-    }
-</ul>
+    </div>
+</div>
